--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -114,3 +114,25 @@
 .person-card h4 {
   color: #f3a401;
 }
+
+.bg-semi {
+  background-color: #2a359e;
+  padding: 10px;
+}
+
+form {
+  display: flex;
+}
+
+@media (max-width: 600px) {
+  .home {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  } .welcome, .carousel {
+    width: 90%;
+    margin: 10px;
+  } form {
+    display: none;
+  }
+}
